--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Login Form</h1>
+	<form >
+		<label for="username">Username</label>
+		<input type="text" id="username" placeholder="Username" required><br>
+		<label for="password">Password</label>
+		<input type="password" id="password" placeholder="Password" required><br>
+		<input type="checkbox" name="rememberMe" id="checkbox">
+		<label for="checkbox" >Remember me</label><br>
+		<input type="submit" value="Submit" id="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
